Starting Npc porting. Compiles but structures are broken
in game but no structure spawning

redo datagen